fix : no closing tag on textarea makes the script included after texarea not loaded

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           class="console-input"
           title="console input"
           rows="1"
-        />
+        ></textarea>
       </div>
     </div>
     <script src="main.js"></script>
