refactor : set textarea spellcheck false

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       </div>
       <div class="input-wrapper">
         <textarea
+          spellcheck="false"
           type="text"
           class="console-input"
           title="console input"
