--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="console-wrapper">
       <div class="console-history">
-        <div class="console-output">1 + 2</div>
-        <div class="console-input">3</div>
+        <div class="console-input">1 + 2</div>
+        <div class="console-output">3</div>
       </div>
       <div class="input-wrapper">
         <textarea
