build : add instruction message in console-history

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <body>
     <div class="console-wrapper">
       <div class="console-history">
-        <div class="console-input">1 + 2</div>
-        <div class="console-output">3</div>
+        <div class="console-input">console.log("Message: " + message)</div>
+        <div class="console-output">Message: You can input code bellow, then press `Enter` to execute. <br>
+          Press `Shift + Enter` to add new line. 
+        </div>
       </div>
       <div class="input-wrapper">
         <textarea
