refactor : edit console message

--- a/index.html
+++ b/index.html
@@ -11,8 +11,26 @@
     <div class="console-wrapper">
       <div class="console-history">
         <div class="console-input">console.log("Message: " + message)</div>
-        <div class="console-output">Message: You can input code bellow, then press `Enter` to execute. <br>
-          Press `Shift + Enter` to add new line. 
+        <div class="console-output">
+          Message:
+          <div class="message">
+            <ul>
+              <li>You can input code bellow, then press `Enter` to execute.</li>
+              <li>Press `Shift + Enter` to add a new line.</li>
+              <li>Type `clear()` to clear the console history</li>
+              <li>
+                You can also type `console.log()` to log a value of variable or
+                code, but it not necessary.
+                <br />
+                <br />
+                Just type `1 + 2` instead of `console.log(1 + 2)` it will
+                generate the same result.
+              </li>
+            </ul>
+            <br />
+            <br />
+            Info : Type `clear()` to clear this message!
+          </div>
         </div>
       </div>
       <div class="input-wrapper">
